@@ -31,6 +31,7 @@
 #define	SIMTA_EXPANSION_SUCCESS		1
 #define	SIMTA_LAUNCH_LIMIT		10
 #define	SIMTA_MIN_WORK_TIME		300
+#define	SIMTA_MAX_HOST_NAME_LEN	256
 
 #define	EXIT_OK				0
 #define	SIMTA_EXIT_OK			0
